# cpp-template

./: CMakeLists.txt  README.md
headers/: header.h
src/: main.cpp
